fix: update route prefixes
